[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curl-compare-loadtest"
version = "0.0.4"
description = "curl load test and response comparison dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Sheldon" }
]
dependencies = [
  "Flask>=3.0.0"
]
keywords = ["flask", "curl", "load-testing", "benchmark", "api-testing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Testing"
]

[project.optional-dependencies]
prod = ["gunicorn>=21.2.0"]
dev = ["build>=1.2.2", "twine>=5.1.0"]

[project.scripts]
curl-compare-loadtest = "app:main"

[tool.setuptools]
py-modules = ["app"]
